[project]
name = "linkedin-post-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.1",
    "fastapi>=0.119.0",
    "fastmcp>=2.12.4",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.10",
    "mcp[cli]>=1.16.0",
    "ollama>=0.6.0",
    "uvicorn>=0.37.0",
]
